# manoslib

./: .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: demo.py
src/manoslib/signal/: filter.py  plotting.py
